--- a/api/package.json
+++ b/api/package.json
@@ -4,24 +4,25 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "start-dev": "set DEBUG=myapp:* & node-dev ./bin/www"
+    "start-dev": "set DEBUG=myapp:* & node-dev ./bin/www",
+    "test": "mocha tests/*.js --exit"
   },
   "dependencies": {
-    "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
-    "easy-livereload": "^1.3.2",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
-    "jade": "~1.11.0",
+    "joi": "^14.3.1",
     "morgan": "~1.9.1",
     "node-dev": "^4.0.0"
   },
   "devDependencies": {
+    "chai": "^4.2.0",
+    "chai-http": "^4.3.0",
     "eslint": "^6.1.0",
     "eslint-config-standard": "^13.0.1",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-node": "^9.1.0",
     "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-standard": "^4.0.0"
+    "mocha": "^6.2.0"
   }
 }
