--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -4,7 +4,7 @@
         "es6": true,
         "jest": true
     },
-    "extends": ["standard", "plugin:react/recommended"],
+    "extends": ["airbnb", "plugin:react/recommended"],
     "globals": {
         "Atomics": "readonly",
         "SharedArrayBuffer": "readonly"
@@ -17,8 +17,17 @@
         "sourceType": "module"
     },
     "plugins": [
-        "react"
+        "react",
+        "react-hooks"
     ],
     "rules": {
+        "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
+        "react-hooks/rules-of-hooks": "error", // Checks rules of Hooks
+        "react-hooks/exhaustive-deps": "warn" // Checks effect dependencies
+    },
+    "settings": {
+        "react":{
+            "version": "16.9.0"
+        }
     }
 }
